--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,14 +50,12 @@
         </div>
       </div>
     </div>
-    <header class="navbar navbar-expand-sm navbar-dark bg-sterne">
-      <nav class="container-xxl flex-column flex-wrap flex-md-nowrap pt-3">
-        <a class="navbar-brand p-0 mb-4" href="{{ site.baseurl }}/">
-          <img src="{{ site.baseurl }}/assets/images/logo.png" alt="SpacePirates" width="398" height="93"/>
-        </a>
-      </nav>
+    <header class="navbar bg-sterne">
+      <a class="my-3 mx-auto" href="{{ site.baseurl }}/">
+        <img class="mw-100 h-auto" src="{{ site.baseurl }}/assets/images/logo.png" alt="SpacePirates" width="398" height="93"/>
+      </a>
     </header>
-    <header class="navbar navbar-expand-md py-2 mb-2 bg-yellow">
+    <header class="navbar navbar-expand py-2 mb-2 bg-yellow">
       <div class="container-xxl flex-nowrap">
         <div class="btn-group yellow">
           <a data-bs-toggle="offcanvas" href="#main-menu" class="btn mi me-3">&#xF479;</a>
