--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,46 +12,6 @@
     <link href="{{ site.baseurl }}/feed.xml" rel="alternate" type="application/rss+xml" title="{{ site.title }}"/>
   </head>
   <body>
-    <div data-bs-theme="dark" class="offcanvas offcanvas-start" tabindex="-1" id="main-menu">
-      <div class="offcanvas-header mb-3">
-        <div class="w-100 text-center">
-          <img width="230" src="{{ site.baseurl }}/assets/images/logo.png" alt="SpacePirates"/>
-          <button type="button" class="btn-close btn-close-white float-end" data-bs-dismiss="offcanvas"></button>
-          <nav class="nav nav-pills nav-justified mt-4">
-            <a class="nav-link mi active" data-bs-toggle="tab" href="#tab-menu" title="Menu">&#xF479;</a>
-            <a class="nav-link mi" data-bs-toggle="tab" href="#tab-sitemap" title="Sitemap">&#xF2EC;</a>
-            <a class="nav-link mi" data-bs-toggle="tab" href="#tab-search" title="Suchen">&#xF52A;</a>
-          </nav>
-        </div>
-      </div>
-      <div class="offcanvas-body p-0">
-        <div class="tab-content">
-          <div class="tab-pane active show" id="tab-menu">
-            <a class="dropdown-item py-2 px-3" href="{{ site.baseurl }}/Aktuelles/"><span class="mi me-3">&#xF588;</span>Aktuelles</a>
-            <a class="dropdown-item py-2 px-3" href="{{ site.baseurl }}/Kontakt"><span class="mi me-3">&#xF4DB;</span>Kontakt</a>
-            <a class="dropdown-item py-2 px-3" href="{{ site.baseurl }}/Publikationen/"><span class="mi me-3">&#xF194;</span>Publikationen</a>
-            <hr class="dropdown-divider my-2"/>
-            <a class="dropdown-item py-2 px-3" href="{{ site.baseurl }}/Spielregeln/"><span class="mi me-3">&#xF3E2;</span>Spielregeln</a>
-            <a class="dropdown-item py-2 px-3" href="{{ site.baseurl }}/Weltraum/"><span class="mi me-3">&#xF845;</span>Weltraum</a>
-            <a class="dropdown-item py-2 px-3" href="{{ site.baseurl }}/Weltraum/Sternenkarte/"><span class="mi me-3">&#xF47F;</span>Sternenkarte</a>
-            <a class="dropdown-item py-2 px-3" href="{{ site.baseurl }}/Abenteuer/"><span class="mi me-3">&#xF2D1;</span>Abenteuer</a>
-            <a class="dropdown-item py-2 px-3" href="{{ site.baseurl }}/Zufallstabellen/"><span class="mi me-3">&#xF544;</span>Zufallstabellen</a>
-            <a class="dropdown-item py-2 px-3" href="{{ site.baseurl }}/Ideenhalde/"><span class="mi me-3">&#xF675;</span>Ideenhalde</a>
-            <hr class="dropdown-divider my-2"/>
-            <a class="dropdown-item py-2 px-3" href="https://github.com/jcorporation/spacepirates"><span class="mi me-3">&#xF3ED;</span>GitHub Repository</a>
-          </div>
-          <div class="tab-pane" id="tab-sitemap">
-            <div id="sitemap-body"></div>
-          </div>
-          <div class="tab-pane" id="tab-search">
-            <div class="px-3 mb-3">
-              <input type="text" class="form-control" placeholder="Suchen" id="inputSearch"/>
-            </div>
-            <div class="list-group list-group-flush" id="searchResult"></div>
-          </div>
-        </div>
-      </div>
-    </div>
     <header class="navbar bg-sterne">
       <a class="my-3 mx-auto" href="{{ site.baseurl }}/">
         <img src="{{ site.baseurl }}/assets/images/logo.png" width="398" height="93" class="mw-100 h-auto" alt="SpacePirates"/>
@@ -59,7 +19,7 @@
     </header>
     <header class="navbar navbar-expand py-2 mb-2 bg-yellow">
       <div class="container-xxl flex-nowrap">
-        <div class="btn-group yellow">
+        <div class="btn-group yellow" id="main-menu-btn">
           <a data-bs-toggle="offcanvas" href="#main-menu" class="btn mi me-3">&#xF479;</a>
         </div>
         <nav class="breadcrumb flex-wrap flex-grow-1 mb-0 justify-content-start me-3">
@@ -68,8 +28,48 @@
         {% include navigate.md data=page.permalink class="yellow" %}
       </div>
     </header>
-    <div class="container-xxl py-2 flex-grow-1">
-        {{ content }}
+    <div class="container-xxl py-2 flex-grow-1 d-flex">
+      <div data-bs-theme="dark" class="offcanvas offcanvas-start" tabindex="-1" id="main-menu">
+        <div class="offcanvas-header mb-3">
+          <div class="w-100 text-center">
+            <img width="230" src="{{ site.baseurl }}/assets/images/logo.png" alt="SpacePirates"/>
+            <button type="button" class="btn-close btn-close-white float-end" data-bs-dismiss="offcanvas"></button>
+            <nav class="nav nav-pills nav-justified mt-4">
+              <a class="nav-link mi active" data-bs-toggle="tab" href="#tab-menu" title="Menu">&#xF479;</a>
+              <a class="nav-link mi" data-bs-toggle="tab" href="#tab-sitemap" title="Sitemap" id="nav-sitemap">&#xF2EC;</a>
+              <a class="nav-link mi" data-bs-toggle="tab" href="#tab-search" title="Suchen" id="nav-search">&#xF52A;</a>
+            </nav>
+          </div>
+        </div>
+        <div class="offcanvas-body p-0">
+          <div class="tab-content">
+            <div class="tab-pane active show" id="tab-menu">
+              <a class="dropdown-item py-2 px-3" href="{{ site.baseurl }}/Aktuelles/"><span class="mi me-3">&#xF588;</span>Aktuelles</a>
+              <a class="dropdown-item py-2 px-3" href="{{ site.baseurl }}/Kontakt"><span class="mi me-3">&#xF4DB;</span>Kontakt</a>
+              <a class="dropdown-item py-2 px-3" href="{{ site.baseurl }}/Publikationen/"><span class="mi me-3">&#xF194;</span>Publikationen</a>
+              <hr class="dropdown-divider my-2"/>
+              <a class="dropdown-item py-2 px-3" href="{{ site.baseurl }}/Spielregeln/"><span class="mi me-3">&#xF3E2;</span>Spielregeln</a>
+              <a class="dropdown-item py-2 px-3" href="{{ site.baseurl }}/Weltraum/"><span class="mi me-3">&#xF845;</span>Weltraum</a>
+              <a class="dropdown-item py-2 px-3" href="{{ site.baseurl }}/Weltraum/Sternenkarte/"><span class="mi me-3">&#xF47F;</span>Sternenkarte</a>
+              <a class="dropdown-item py-2 px-3" href="{{ site.baseurl }}/Abenteuer/"><span class="mi me-3">&#xF2D1;</span>Abenteuer</a>
+              <a class="dropdown-item py-2 px-3" href="{{ site.baseurl }}/Zufallstabellen/"><span class="mi me-3">&#xF544;</span>Zufallstabellen</a>
+              <a class="dropdown-item py-2 px-3" href="{{ site.baseurl }}/Ideenhalde/"><span class="mi me-3">&#xF675;</span>Ideenhalde</a>
+              <hr class="dropdown-divider my-2"/>
+              <a class="dropdown-item py-2 px-3" href="https://github.com/jcorporation/spacepirates"><span class="mi me-3">&#xF3ED;</span>GitHub Repository</a>
+            </div>
+            <div class="tab-pane" id="tab-sitemap">
+              <div id="sitemap-body"></div>
+            </div>
+            <div class="tab-pane" id="tab-search">
+              <div class="px-3 mb-3">
+                <input type="text" class="form-control" placeholder="Suchen" id="inputSearch"/>
+              </div>
+              <div class="list-group list-group-flush" id="searchResult"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      {{ content }}
     </div>
     <footer class="footer-bottom bg-light" id="footer">
       <nav class="container-xxl d-flex align-items-center justify-content-between">
