--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
         <img src="{{ site.baseurl }}/assets/images/logo.png" width="398" height="93" class="mw-100 h-auto" alt="SpacePirates"/>
       </a>
     </header>
-    <header class="navbar navbar-expand py-2 mb-2 bg-yellow">
+    <header id="top-bar" class="navbar navbar-expand py-2 mb-0 bg-yellow sticky-top">
       <div class="container-xxl flex-nowrap">
         <div class="btn-group yellow" id="main-menu-btn">
           <a data-bs-toggle="offcanvas" href="#main-menu" class="btn mi me-3">&#xF479;</a>
@@ -28,7 +28,7 @@
         {% include navigate.md data=page.permalink class="yellow" %}
       </div>
     </header>
-    <div class="container-xxl py-2 flex-grow-1 d-flex">
+    <div class="container-xxl py-2 flex-grow-1 d-flex pt-0">
       <div data-bs-theme="dark" class="offcanvas offcanvas-start" tabindex="-1" id="main-menu">
         <div class="offcanvas-header mb-3">
           <div class="w-100 text-center">
