--- a/_layouts/aside.html
+++ b/_layouts/aside.html
@@ -2,16 +2,14 @@
 layout: default
 ---
 
-<div class="row row-cols-1 row-cols-xl-2 gx-5 gy-3 me-0">
-    <main class="col col-xl-8">
-        {{ content }}
-    </main>
-    <aside class="col col-xl-4 pe-0">
-        {% if page.aside %}
-            {% include_relative {{ page.aside }} %}
-        {% else %}
-            {% assign aside = page.name | replace: ".md", "_aside.md" %}
-            {% include_relative {{ aside }} %}
-        {% endif %}
-    </aside>
-</div>
+<main class="col col-xl-8 col-xxl-6">
+    {{ content }}
+</main>
+<aside class="col col-xl-4 col-xxl-3 pe-0">
+    {% if page.aside %}
+        {% include_relative {{ page.aside }} %}
+    {% else %}
+        {% assign aside = page.name | replace: ".md", "_aside.md" %}
+        {% include_relative {{ aside }} %}
+    {% endif %}
+</aside>
