--- a/_layouts/konzern.html
+++ b/_layouts/konzern.html
@@ -2,23 +2,20 @@
 layout: default
 ---
 
-{% assign name = page.title | replace: " ", "_" %}
-{% assign name = name | remove: "." %}
-{% assign name = name | remove: '"' %}
-{% assign name = name | replace: "ß", "ss" %}
-{% assign name = name | replace: "ä", "ae" %}
-{% assign name = name | replace: "ö", "oe" %}
-{% assign name = name | replace: "ü", "ue" %}
-{% assign name = name | replace: "Ä", "ae" %}
-{% assign name = name | replace: "Ö", "oe" %}
-{% assign name = name | replace: "Ü", "ue" %}
-{% assign data = page.sitedata.Konzerne[name] %}
-
-<div class="row row-cols-1 row-cols-xl-2 gx-5 gy-3 me-0">
-  <main class="col col-xl-8">
+<main class="col col-xl-8 col-xxl-6">
     {{ content }}
-  </main>
-  <aside class="col col-xl-4 pe-0" data-name="{{ name }}">
+</main>
+<aside class="col col-xl-4 col-xxl-3 pe-0" data-name="{{ name }}">
+    {% assign name = page.title | replace: " ", "_" %}
+    {% assign name = name | remove: "." %}
+    {% assign name = name | remove: '"' %}
+    {% assign name = name | replace: "ß", "ss" %}
+    {% assign name = name | replace: "ä", "ae" %}
+    {% assign name = name | replace: "ö", "oe" %}
+    {% assign name = name | replace: "ü", "ue" %}
+    {% assign name = name | replace: "Ä", "ae" %}
+    {% assign name = name | replace: "Ö", "oe" %}
+    {% assign name = name | replace: "Ü", "ue" %}
+    {% assign data = page.sitedata.Konzerne[name] %}
     {% include konzern.md data=data %}
-  </aside>
-</div>
+</aside>
