--- a/_layouts/weltraumphaenomen.html
+++ b/_layouts/weltraumphaenomen.html
@@ -2,22 +2,20 @@
 layout: default
 ---
 
-<div class="row row-cols-1 row-cols-xl-2 gx-5 gy-3 me-0">
-  <main class="col col-xl-8">
-    {{ content }}
-  </main>
-  <aside class="col col-xl-4 pe-0">
-    {% assign name = page.title | replace: " ", "_" %}
-    {% assign name = name | remove: "." %}
-    {% assign name = name | remove: '"' %}
-    {% assign name = name | replace: "ß", "ss" %}
-    {% assign name = name | replace: "ä", "ae" %}
-    {% assign name = name | replace: "ö", "oe" %}
-    {% assign name = name | replace: "ü", "ue" %}
-    {% assign name = name | replace: "Ä", "ae" %}
-    {% assign name = name | replace: "Ö", "oe" %}
-    {% assign name = name | replace: "Ü", "ue" %}
-    {% assign data = page.sitedata.Weltraumphaenomene[name] %}
-    {% include weltraumphaenomen.md data=data %}
-  </aside>
-</div>
+<main class="col col-xl-8 col-xxl-6">
+  {{ content }}
+</main>
+<aside class="col col-xl-4 col-xxl-3 pe-0">
+  {% assign name = page.title | replace: " ", "_" %}
+  {% assign name = name | remove: "." %}
+  {% assign name = name | remove: '"' %}
+  {% assign name = name | replace: "ß", "ss" %}
+  {% assign name = name | replace: "ä", "ae" %}
+  {% assign name = name | replace: "ö", "oe" %}
+  {% assign name = name | replace: "ü", "ue" %}
+  {% assign name = name | replace: "Ä", "ae" %}
+  {% assign name = name | replace: "Ö", "oe" %}
+  {% assign name = name | replace: "Ü", "ue" %}
+  {% assign data = page.sitedata.Weltraumphaenomene[name] %}
+  {% include weltraumphaenomen.md data=data %}
+</aside>
