Fix: Suche in der Sternenkarte

--- a/_layouts/sternenkarte.html
+++ b/_layouts/sternenkarte.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.title }} – {{ site.description }}</title>
+    <link href="{{ site.baseurl }}/assets/bootstrap-icons.woff2" rel="preload" type="font/woff2" as="font" crossorigin="anonymous"/>
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/default.css"/>
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/Weltraum/Sternenkarte/karte.css"/>
-    <link rel="icon" href="{{ site.baseurl }}/assets/favicon.ico" type="image/x-icon"/>
-    <link rel="alternate" type="application/rss+xml"  href="{{ site.baseurl }}/feed.xml" title="{{ site.title }}"/>
+    <link href="{{ site.baseurl }}/assets/images/appicon-192.png" rel="apple-touch-icon"/>
+    <link href="{{ site.baseurl }}/assets/images/appicon-192.png" rel="icon"/>
   </head>
   <body class="p-1 bg-yellow">
     <main class="container-fluid p-0">
