--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,12 +12,7 @@
     <link href="{{ site.baseurl }}/feed.xml" rel="alternate" type="application/rss+xml" title="{{ site.title }}"/>
   </head>
   <body>
-    <header class="navbar bg-sterne">
-      <a class="my-3 mx-auto" href="{{ site.baseurl }}/">
-        <img src="{{ site.baseurl }}/assets/images/logo.png" width="398" height="93" class="mw-100 h-auto" alt="SpacePirates"/>
-      </a>
-    </header>
-    <header id="top-bar" class="navbar navbar-expand py-2 mb-0 bg-yellow sticky-top">
+    <header id="top-bar" class="navbar py-2 mb-0 bg-yellow fixed-top">
       <div class="container-xxl flex-nowrap">
         <div class="btn-group yellow" id="main-menu-btn">
           <a data-bs-toggle="offcanvas" href="#main-menu" class="btn mi me-3">&#xF479;</a>
