--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -14,6 +14,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  padding-top: 4rem;
 }
 
 .offcanvas .dropdown-item:hover,
