--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,5 +3,8 @@ layout: default
 ---
 
 <main class="col col-xl-12 col-xxl-9 pe-0">
+  {% if page.url != '/' %}
+    <h1>{{page.title}}</h1>
+  {% endif %}
   {{ content }}
 </main>
