--- a/_layouts/planet.html
+++ b/_layouts/planet.html
@@ -2,21 +2,14 @@
 layout: default
 ---
 
-<main class="col col-xl-8 col-xxl-6">
-  {{ content }}
-  {% include planet_info.md data=page.title %}
-</main>
-<aside class="col col-xl-4 col-xxl-3 pe-0">
-  {% assign name = page.title | replace: " ", "_" %}
-  {% assign name = name | remove: "." %}
-  {% assign name = name | remove: '"' %}
-  {% assign name = name | replace: "ß", "ss" %}
-  {% assign name = name | replace: "ä", "ae" %}
-  {% assign name = name | replace: "ö", "oe" %}
-  {% assign name = name | replace: "ü", "ue" %}
-  {% assign name = name | replace: "Ä", "ae" %}
-  {% assign name = name | replace: "Ö", "oe" %}
-  {% assign name = name | replace: "Ü", "ue" %}
+{% capture aside_data %}
+  {% include title2index.md %}
   {% assign data = page.sitedata.Planeten[name] %}
   {% include planet.md data=data %}
-</aside>
+{% endcapture %}
+
+{% capture content_data %}
+  {% include planet_info.md data=page.title %}
+{% endcapture %}
+
+{% include aside.html aside_data=aside_data content_data=content_data %}
