--- a/_layouts/stadt.html
+++ b/_layouts/stadt.html
@@ -2,20 +2,10 @@
 layout: default
 ---
 
-<main class="col col-xl-8 col-xxl-6">
-  {{ content }}
-</main>
-<aside class="col col-xl-4 col-xxl-3 pe-0">
-  {% assign name = page.title | replace: " ", "_" %}
-  {% assign name = name | remove: "." %}
-  {% assign name = name | remove: '"' %}
-  {% assign name = name | replace: "ß", "ss" %}
-  {% assign name = name | replace: "ä", "ae" %}
-  {% assign name = name | replace: "ö", "oe" %}
-  {% assign name = name | replace: "ü", "ue" %}
-  {% assign name = name | replace: "Ä", "ae" %}
-  {% assign name = name | replace: "Ö", "oe" %}
-  {% assign name = name | replace: "Ü", "ue" %}
+{% capture aside_data %}
+  {% include title2index.md %}
   {% assign data = page.sitedata.Staedte[name] %}
   {% include stadt.md data=data %}
-</aside>
+{% endcapture %}
+
+{% include aside.html aside_data=aside_data %}
