--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,10 @@ layout: default
 
 <main class="col col-xl-12 col-xxl-9 pe-0">
   {% if page.url != '/' %}
-    <h1>{{page.title}}</h1>
+    <h1>
+      {%if page.icon %}<span class="mi">{{ page.icon }}</span>{% endif %}
+      {{page.title}}
+    </h1>
   {% endif %}
   {{ content }}
 </main>
