--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     <link href="{{ site.baseurl }}/feed.xml" rel="alternate" type="application/rss+xml" title="{{ site.title }}"/>
   </head>
   <body>
-    <header id="top-bar" class="navbar py-2 mb-0 bg-yellow fixed-top">
+    <header id="top-bar" class="navbar py-2 mb-0 bg-yellow sticky-top">
       <div class="container-xxl flex-nowrap">
         <div class="btn-group yellow" id="main-menu-btn">
           <a data-bs-toggle="offcanvas" href="#main-menu" class="btn mi me-3">&#xF479;</a>
