Fix: Layout im Infopanel der Sternenkarte #38

--- a/Weltraum/Sternenkarte/karte.css
+++ b/Weltraum/Sternenkarte/karte.css
@@ -40,3 +40,11 @@
 #searchTabResult a {
     padding-left: 0;
 }
+
+#infoTab > aside {
+    padding-left: 0 !important;
+}
+
+#infoTab > main table {
+    margin-bottom: 1rem;
+}
