--- a/_layouts/sternenkarte.html
+++ b/_layouts/sternenkarte.html
@@ -31,9 +31,7 @@
           </div>
           <div class="modal-body">
             <div class="tab-content">
-              <div class="tab-pane active show" id="infoTab">
-                Auf die Beschriftung klicken, um weitere Informationen zu erhalten.
-              </div>
+              <div class="tab-pane active show" id="infoTab"></div>
               <div class="tab-pane" id="searchTab">
                 <div class="list-group list-group-flush" id="searchTabResult">
                   <div class="list-group-item">Auf die Beschriftung klicken, um zu suchen.</div>
@@ -45,8 +43,11 @@
       </div>
     </div>
     <script src="{{ site.baseurl }}/assets/js/bootstrap-native.min.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/data_names.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/zufallstabellen.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/zufallsgenerator.js"></script>
     <script src="{{ site.baseurl }}/assets/js/default.js"></script>
-    <script type="text/javascript" src="{{ site.baseurl }}/Weltraum/Sternenkarte/karte.js"></script>
-    <script type="text/javascript" src="{{ site.baseurl }}/Weltraum/Sternenkarte/sternenkarte.js"></script>
+    <script src="{{ site.baseurl }}/Weltraum/Sternenkarte/karte.js"></script>
+    <script src="{{ site.baseurl }}/Weltraum/Sternenkarte/sternenkarte.js"></script>
   </body>
 </html>
