--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
         <div data-bs-theme="dark" class="offcanvas offcanvas-start col col-xxl-3" tabindex="-1" id="main-menu">
           <div class="offcanvas-header pb-4">
             <div class="w-100 text-center">
-              <img width="230" src="{{ site.baseurl }}/assets/images/logo.webp" alt="SpacePirates"/>
+              <img width="230" src="{{ site.baseurl }}/assets/images/logo-schriftzug-web.svg" alt="SpacePirates"/>
               <button type="button" class="btn-close btn-close-white float-end" data-bs-dismiss="offcanvas"></button>
               <nav class="nav nav-pills nav-justified mt-4">
                 <a class="nav-link mi active" data-bs-toggle="tab" href="#tab-menu" title="Menu">&#xF479;</a>
