Navigation, Editieren Button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,7 +74,9 @@
     </div>
     <footer class="footer-bottom bg-light" id="footer">
       <nav class="container-xxl d-flex align-items-center justify-content-between">
-        <div></div>
+        <div class="btn-group">
+          <a href="https://github.com/jcorporation/spacepirates/tree/master/{{ page.path }}" class="btn border mi" title="Editieren" target="_blank" rel="nofollow">&#xF4CA;</a>
+        </div>
         <div>
           <a class="p-2" href="https://www.jcgames.de/">
             <img src="{{ site.baseurl }}/assets/images/jcgames-logo.webp" width="103" height="47" alt="jcgames"/>
