Fix: Höhere Footer für mobile Ansicht #44

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,7 +73,7 @@
       </div>
     </div>
     <footer class="footer-bottom bg-light" id="footer">
-      <nav class="container-xxl d-flex align-items-center justify-content-between">
+      <nav class="container-xxl d-flex align-items-center justify-content-between pb-4">
         <div class="btn-group">
           <a href="https://github.com/jcorporation/spacepirates/tree/master/{{ page.path }}" class="btn border mi" title="Editieren" target="_blank" rel="nofollow">&#xF4CA;</a>
         </div>
