--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -351,7 +351,7 @@ ul.sitemap {
   border-color: var(--sp-orange);
 }
 
-@media (min-width: 1200px) {
+@media (width >= 1200px) {
   aside > table {
     width: 100%;
   }
@@ -361,7 +361,7 @@ ul.sitemap {
   }
 }
 
-@media (max-width: 1399px) {
+@media (width < 1400px) {
   .offcanvas {
     margin-top: 0;
     padding-left: 0;
@@ -369,7 +369,7 @@ ul.sitemap {
   }
 }
 
-@media (min-width: 1400px) {
+@media (width >= 1400px) {
   #main-menu-btn {
     display: none !important;
   }
