--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,12 +82,13 @@
             <img src="{{ site.baseurl }}/assets/images/jcgames-logo.webp" width="103" height="47" alt="jcgames"/>
           </a>
         </div>
-        <div>
-          {% include navigate.md data=page.permalink %}
-        </div>
+        {% include navigate.md data=page.permalink %}
       </nav>
     </footer>
     <script src="{{ site.baseurl }}/assets/js/bootstrap-native.min.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/data_names.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/zufallstabellen.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/zufallsgenerator.js"></script>
     <script src="{{ site.baseurl }}/assets/js/default.js"></script>
   </body>
 </html>
