--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,5 +1,5 @@
 <div class="col col-xl-12 col-xxl-9 pe-0">
-    <h1>{{ page.title }}</h1>
+    <h1 id="mainTitle" class="{% if page.url == '/' %}d-none{% endif %}"><span class="mi {% if page.icon == nil %}d-none{% endif %}">{%if page.icon %}{{ page.icon }}{% endif %}</span>{{ page.title }}</h1>
     <div class="row row-cols-1 row-cols-xl-2 me-0">
         <main class="col col-xl-8 pe-0">
             {{ content }}
