--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
               </nav>
             </div>
           </div>
-          <div class="offcanvas-body p-0">
+          <div class="offcanvas-body p-0" id="main-menu-body">
             <div class="tab-content">
               <div class="tab-pane active show" id="tab-menu">
                 <a class="dropdown-item py-2 px-3" href="{{ site.baseurl }}/Aktuelles/"><span class="mi me-3">&#xF588;</span>Aktuelles</a>
