--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     <header id="top-bar" class="navbar py-2 mb-0 bg-yellow sticky-top">
       <div class="container-xxl flex-nowrap">
         <div class="btn-group yellow" id="main-menu-btn">
-          <a data-bs-toggle="offcanvas" href="#main-menu" class="btn mi me-3">&#xF479;</a>
+          <a data-bs-toggle="offcanvas" id="main-menu-toggle" href="#main-menu" class="btn mi me-3">&#xF479;</a>
         </div>
         <nav class="breadcrumb flex-wrap flex-grow-1 mb-0 justify-content-start me-3">
           {% include breadcrumbs.md %}
