--- a/_layouts/sternenkarte.html
+++ b/_layouts/sternenkarte.html
@@ -42,6 +42,14 @@
         </div>
       </div>
     </div>
+    <div class="toast-container">
+      <div id="errorToast" class="toast">
+        <div class="toast-header bg-danger text-light">
+          <strong class="mr-auto">Fehler</strong>
+        </div>
+        <div class="toast-body bg-light" id="errorText"></div>
+      </div>
+    </div>
     <script src="{{ site.baseurl }}/assets/js/bootstrap-native.min.js"></script>
     <script src="{{ site.baseurl }}/assets/js/data_names.js"></script>
     <script src="{{ site.baseurl }}/assets/js/zufallstabellen.js"></script>
