--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -97,6 +97,12 @@
         </div>
         <div class="toast-body bg-light" id="errorText"></div>
       </div>
+      <div id="infoToast" class="toast">
+        <div class="toast-header bg-yellow text-dark">
+          <strong class="mr-auto">Info</strong>
+        </div>
+        <div class="toast-body bg-light" id="infoText"></div>
+      </div>
     </div>
     <script src="{{ site.baseurl }}/assets/js/bootstrap-native.min.js"></script>
     <script src="{{ site.baseurl }}/assets/js/data_names.js"></script>
