--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -372,6 +372,8 @@ ul.sitemap {
     margin-top: 0;
     padding-left: 0;
     padding-right: 0;
+    top: 0 !important;
+    max-height: unset !important;
   }
 }
 
@@ -390,12 +392,10 @@ ul.sitemap {
     visibility: visible;
     position: sticky;
     left: unset !important;
-    top: 7rem !important;
     height: 100%;
     min-width: unset;
     width: 25% !important;
     overflow: hidden;
-    max-height: calc(100vh - 12.5rem);
     background-color: transparent;
     color: var(--bs-gray-900);
   }
